ajout du reste des éléments mais les tests ne marche aps je dois corrger ça

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
 							<excludes>
 								<exclude>**/dto/**</exclude>
 								<exclude>**/enumeration/**</exclude>
+								<exclude>**/model/**</exclude>
 								<exclude>**/response/**</exclude>
 								<exclude>**/config/**</exclude>
 								<exclude>**/exception/**</exclude>
