--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.servlet.context-path=/api
 
 logging.level.org.springframework.security=DEBUG
+
+recommendations.python.base-url=http://recommendations-api:5000
