finalisation du projet

--- a/python-api/Dockerfile
+++ b/python-api/Dockerfile
@@ -10,8 +10,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 WORKDIR /app
 
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r /app/requirements.txt
+COPY require.txt /app/require.txt
+RUN pip install --no-cache-dir -r /app/require.txt
 
 COPY . /app
 
